# dsa-extras

./: .gitignore  LICENSE  pyproject.toml  setup.py
demo/: .gitignore  demo.bat
dsa_extras/: codec.txt  ea_field.py  ea_file.py  ea_folder.py  ea_groups.py  huffman.py  huffmancodec.py  makehuffmantable.py  nmm2dsa.py  nmm_common.py  nmm_enum.py  nmm_group.py  nmm_type.py  postinstall.py  textcodec.py
dsa_extras/ea/: field.py  file.py  folder.py
dsa_extras/nmm/: enum.py  group.py  nmm2dsa.py  type.py
filters/: gbaimg.py  gbalz77.py  png.py  portrait.py  tileimg.py  tiletest.py
structgroups/: image.txt
structgroups/FE/: main_group.txt  pointer_group.txt  shopList_group.txt
structgroups/FE6/: _group.txt  battleData_group.txt  main_group.txt  unit_group.txt
structgroups/FE7/: AllNMM.txt  Animated Map Sprites.txt  Arena Classes.txt  Battle Animation Weapon Associations.txt  Battle Animations.txt  Battle Backgrounds.txt  Boss Music Associations.txt  CGSegments.txt  CGs.txt  Chapter Data.txt  Chapter Resources.txt  Character Battle Animation Weapon Associations.txt  Character Battle Palettes.txt  Characters.txt  Classes.txt  Eliwood and Hector mode death quotes.txt  Eliwood mode endings.txt  EndingData.txt  General death quotes.txt  Generic battle convos.txt  Hector mode endings.txt  Items.txt  Lyn Ending Hilltop Text.txt  Lyn Mode Epilogues.txt  Lyn mode death quotes.txt  Movement Costs.txt  Music.txt  Portraits.txt  ScreenTiles.txt  Sound Room Items.txt  (+15 more)
tests/: test_huffmantable.py  test_textcodec.py
types/: Pointer.txt  extra.txt  imagetypes.txt
(+41 files in other folders)
