[tool.poetry]
name = "dsa-extras"
version = "0.1.0"
description = "GBAFE-related content for @zahlman's `dsa` tools"
authors = ["Paulette S. Serrano <paulette.s.serrano@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
dsa = {git = "ssh://git@github.com/zahlman/dsa.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
nmm2dsa = "dsa_extras.nmm2dsa:nmm2dsa.invoke"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
