[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "dsa_extras"
version = "0.1.0"
description = "GBAFE-related content for @zahlman's `dsa` tools"
authors = [ "Paulette S. Serrano <paulette.s.serrano@gmail.com>",]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
nmm2dsa = "dsa_extras.nmm.nmm2dsa:nmm2dsa.invoke"
dsa-extras-postinstall = "dsa_extras.postinstall:install_library.invoke"

[tool.poetry.dependencies.dsa]
git = "ssh://git@github.com/zahlman/dsa.git"
